--- a/templates/header.html
+++ b/templates/header.html
@@ -8,6 +8,7 @@
   <title>Hello {{.user}}</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
   <link rel="icon" href="/assets/todo_icon.ico">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
 {{template "navbar.html" .}}
