--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,13 @@
 {{template "header.html" .}}
 <section class="section">
   <div class="container">
-    <h1 class="title">
+    <h1 class="title is-1">
       TODoo
     </h1>
-    <p class="subtitle">
+    <p class="subtitle is-1">
       Remind you every things!
     </p>
-    <p>{{.content}}</p>
+    <p class="subtitle is-2">{{.content}}</p>
   </div>
 </section>
 {{template "footer.html"}}
