--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,10 @@
     <p class="subtitle is-1">
       Remind you every things!
     </p>
-    <p class="subtitle is-2">{{.content}}</p>
+    <p class="subtitle is-3">
+      Contact me: paul0610123@gmail.com
+      Github: <a href="https://github.com/TTC-CCF"></a>
+    </p>
   </div>
 </section>
 {{template "footer.html"}}
