--- a/templates/index.html
+++ b/templates/index.html
@@ -7,10 +7,22 @@
     <p class="subtitle is-1">
       Remind you every things!
     </p>
-    <p class="subtitle is-3">
-      Contact me: paul0610123@gmail.com
-      Github: <a href="https://github.com/TTC-CCF"></a>
-    </p>
+    <div class="columns">
+      <div class="column">
+      <article class="message">
+        <div class="message-header"></div>
+        <div class="message-body">
+          <strong>Contact me:</strong> <br>paul0610123@gmail.com<br>
+          <strong>Github:</strong><br><a href="http://github.com/TTC-CCF">TTC</a>
+        </div>
+      </article>
+      </div>
+      <div class="column"></div>
+      <div class="column"> </div>
+      <div class="column"> </div>
+    </div>
   </div>
+  </div>
+
 </section>
 {{template "footer.html"}}
