Change contact open tab

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
         <div class="message-header"></div>
         <div class="message-body">
           <strong>Contact me:</strong> <br>paul0610123@gmail.com<br>
-          <strong>Github:</strong><br><a href="http://github.com/TTC-CCF">TTC</a>
+          <strong>Github:</strong><br><a href="http://github.com/TTC-CCF" target="_blank">TTC</a>
         </div>
       </article>
       </div>
